<resources>
    <string name="app_name">KEA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_friends_text">Search for friends</string>
    <string name="welcome_message">Welcome to KEA!</string>
    <string name="continue_message">Click here to continue!</string>
    <string name="log_out_message">Log Out</string>
    <string name="six_AM_block">6:00–6:30 AM</string>
    <string name="six_thirty_AM_block">6:30–7:00 AM</string>
    <string name="seven_AM_block">7:00–7:30 AM</string>
    <string name="seven_thirty_AM_block">7:30–8:00 AM</string>
    <string name="eight_AM_block">8:00–8:30 AM</string>
    <string name="eight_thirty_AM_block">8:30–9:00 AM</string>
    <string name="nine_AM_block">9:00–9:30 AM</string>
    <string name="nine_thirty_AM_block">9:30–10:00 AM</string>
    <string name="ten_AM_block">10:00–10:30 AM</string>
    <string name="ten_thirty_AM_block">10:30–11:00 AM</string>
    <string name="eleven_AM_block">11:00–11:30 AM</string>
    <string name="eleven_thirty_AM_block">11:30 AM- 12:00 PM</string>
    <string name="twelve_PM_block">12:00–12:30 PM</string>
    <string name="twelve_thirty_PM_block">12:30–1:00 PM</string>
    <string name="one_PM_block">1:00–1:30 PM</string>
    <string name="one_thirty_PM_block">1:30–2:00 PM</string>
    <string name="two_PM_block">2:00–2:30 PM</string>
    <string name="two_thirty_PM_block">2:30–3:00 PM</string>
    <string name="three_PM_block">3:00–3:30 PM</string>
    <string name="three_thirty_PM_block">3:30–4:00 PM</string>
    <string name="four_PM_block">4:00–4:30 PM</string>
    <string name="four_thirty_PM_block">4:30–5:00 PM</string>
    <string name="five_PM_block">5:00–5:30 PM</string>
    <string name="five_thirty_PM_block">5:30–6:00 PM</string>
    <string name="six_PM_block">6:00–6:30 PM</string>
    <string name="six_thirty_PM_block">6:30–7:00 PM</string>
    <string name="seven_PM_block">7:00–7:30 PM</string>
    <string name="seven_thirty_PM_block">7:30–8:00 PM</string>
    <string name="eight_PM_block">8:00–8:30 PM</string>
    <string name="eight_thirty_PM_block">8:30–9:00 PM</string>
    <string name="nine_PM_block">9:00–9:30 PM</string>
    <string name="nine_thirty_PM_block">9:30–10:00 PM</string>
    <string name="free_button">Free</string>
    <string name="busy_button">set</string>
    <string name="set_date">mm/dd/yyyy</string>
    <string name="busy_label">Set Availability</string>
    <string name="crossCheckInstruction">Double click on the get result button to crosscheck. Enter in your friends\' usernames between commas with no space! The result shows the number of people who are free</string>
    <string name="instruction">Hello users! To get started, press the + button to create a new event. If you have already made and shared an event, press crosscheck!</string>
</resources>